--- a/AIanomalie.ipynb
+++ b/AIanomalie.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from PIL import Image\n",
     "import torch\n",
     "import pandas as pd\n",
-    "import os\n",
+    "import os, sys\n",
     "from skimage import io\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import numpy as np\n",
     "from torch.utils.data import Dataset\n",
-    "from torchvision import datasets, transforms\n",
-    "\n",
-    "#import helper\n",
-    "#zistit ako to spojazdnit"
+    "from torchvision import datasets, transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,82 +39,413 @@
     "        print(self.annotations.iloc[index,1])\n",
     "        image = io.imread(imgPath)\n",
     "        yLabel = torch.tensor(int(self.annotations.iloc[index,1]))\n",
-    "\n",
+    "        print(type(image))\n",
     "        if self.transform:\n",
-    "            image = self.transform(image)\n",
+    "            image = self.transform(Image.fromarray(image))\n",
+    "            print(type(image))\n",
     "        \n",
-    "        return (image,yLabel)\n",
-    "        \n"
+    "        return (image,yLabel)    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset1 = AnomalyDataset(csvFile=\"./Images/Labels.csv\", rootDir=\"Images\")"
+    "inputSize = 224\n",
+    "batchSize = 50\n",
+    "learninigRate = 0.001\n",
+    "epochs = 150"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Anomaly5.png\n",
-      "Anomaly47.png\n",
-      "Anomaly1.png\n",
-      "Anomaly33.png\n",
-      "Anomaly3.png\n",
-      "Anomaly19.png\n",
-      "Anomaly2.png\n",
-      "Anomaly27.png\n",
-      "Anomaly22.png\n",
-      "Anomaly35.png\n",
-      "Anomaly36.png\n",
-      "Anomaly42.png\n",
-      "Anomaly21.png\n",
-      "Anomaly6.png\n",
-      "Anomaly15.png\n",
-      "Anomaly9.png\n",
-      "Anomaly46.png\n",
-      "Anomaly44.png\n",
-      "Anomaly10.png\n",
-      "Anomaly48.png\n",
-      "Anomaly23.png\n",
-      "Anomaly31.png\n",
-      "Anomaly8.png\n",
-      "Anomaly16.png\n",
-      "Anomaly12.png\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataLoader = torch.utils.data.DataLoader(dataset1,batch_size=25,shuffle=True)\n",
+    "normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "                                 std=[0.229, 0.224, 0.225])\n",
     "\n",
-    "images, labels = next(iter(dataLoader))\n"
+    "transform = transforms.Compose([\n",
+    "        transforms.RandomResizedCrop(inputSize, scale=(0.2, 1.0)), \n",
+    "        transforms.RandomHorizontalFlip(),\n",
+    "        transforms.ToTensor(),\n",
+    "        normalize,\n",
+    "    ])\n",
+    "\n",
+    "dataset = AnomalyDataset(csvFile=\"./Images/Labels.csv\", rootDir=\"Images\",transform=transform)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainDatasetLength = int(len(dataset)*0.7)\n",
+    "\n",
+    "trainSet, testSet = torch.utils.data.random_split(dataset,[trainDatasetLength,len(dataset)-trainDatasetLength]) #splitovanie datasetu na testovacie a trenovacie data\n",
+    "\n",
+    "trainLoader = torch.utils.data.DataLoader(trainSet,batch_size=batchSize,shuffle=True)\n",
+    "testLoader = torch.utils.data.DataLoader(testSet,batch_size=batchSize,shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using cache found in C:\\Users\\zidov/.cache\\torch\\hub\\pytorch_vision_v0.10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = torch.hub.load('pytorch/vision:v0.10.0','mobilenet_v2', pretrained=False)\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "model = model.cuda()\n",
+    "optimizer = torch.optim.Adam(model.parameters(),lr=learninigRate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-      "        0])\n"
+      "Anomaly10959.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly14437.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly16174.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly12298.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly1436.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly2674.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly548.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly6438.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly843.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19619.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly11637.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly16138.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19799.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly17577.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly8726.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly1681.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19154.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly754.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19960.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly4379.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly10382.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly5179.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly14638.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly5654.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly13421.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly20646.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly18278.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly9799.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly12704.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly410.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly3317.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly12962.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly8259.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly6312.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19963.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly1965.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly19578.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly17338.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly5766.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly2638.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly9387.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly9656.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly7607.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly13137.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly9422.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly16717.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly15190.png\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly18742.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly8606.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n",
+      "Anomaly16100.png\n",
+      "0\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'torch.Tensor'>\n"
      ]
     }
    ],
    "source": [
-    "print(labels)"
+    "trainLoss = []\n",
+    "testLoss = []\n",
+    "trainAcc = []\n",
+    "testAcc = []\n",
+    "\n",
+    "for epoch in range(1,epochs+1):\n",
+    "    runningLoss = .0\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    for i, (inputs,labels) in enumerate(trainLoader):\n",
+    "        inputs = inputs.cuda()\n",
+    "        labels = labels.cuda()\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        inputs.size()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels) \n",
+    "\n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        runningLoss += loss.item()\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "    runningLoss /= len(trainLoader)\n",
+    "    trainLoss.append(runningLoss)\n",
+    "    runningAcc = correct / total\n",
+    "    trainAcc.append(runningAcc)\n",
+    "\n",
+    "    if epoch % 2 == 0:\n",
+    "        file_object = open('learninigOutput.txt', 'a')\n",
+    "        file_object.write(\"\\nEpoch: {}\".format(epoch))\n",
+    "        file_object.write('Train Acc. => {:.3f}%'.format(100*runningAcc))\n",
+    "        file_object.write('Train Loss => {:.5f}'.format(runningLoss))\n",
+    "        file_object.close()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        testRunningLoss = 0\n",
+    "        for data in testLoader:\n",
+    "            inputs, labels = data\n",
+    "            inputs = inputs.cuda()\n",
+    "            labels = labels.cuda()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            testRunningLoss += loss.item()\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "        \n",
+    "        testRunningLoss /= len(testLoader)\n",
+    "        testLoss.append(testRunningLoss)\n",
+    "        testRunningAcc = correct /total\n",
+    "        testAcc.append(testRunningAcc)\n",
+    "\n",
+    "        if epoch % 2 == 0:\n",
+    "            file_object = open('learninigOutput.txt', 'a')\n",
+    "            file_object.write(\"\\nEpoch: {}\".format(epoch))\n",
+    "            file_object.write('Test Acc. => {:.3f}%'.format(100 * testRunningAcc))\n",
+    "            file_object.write('Test Loss => {:.5f}'.format(testRunningLoss))\n",
+    "            file_object.close()\n",
+    "\n",
+    "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkAccuracy(testloader,model):\n",
+    "    with torch.no_grad():\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        testRunningLoss = 0\n",
+    "        for data in testLoader:\n",
+    "            inputs, labels = data\n",
+    "            inputs = inputs.cuda()\n",
+    "            labels = labels.cuda()\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            testRunningLoss += loss.item()\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            total += labels.size(0)\n",
+    "            correct += (predicted == labels).sum().item()\n",
+    "        \n",
+    "        testRunningLoss /= len(testLoader)\n",
+    "        testLoss.append(testRunningLoss)\n",
+    "        testRunningAcc = correct /total\n",
+    "        testAcc.append(testRunningAcc)\n",
+    "\n",
+    "        if epoch % 2 == 0:\n",
+    "            print(\"\\nEpoch: {}\".format(epoch))\n",
+    "            print('Test Acc. => {:.3f}%'.format(100 * testRunningAcc), end = ' | ')\n",
+    "            print('Test Loss => {:.5f}'.format(testRunningLoss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modelSave(model):\n",
+    "    torch.save(model,\"anomalie.pth\")\n",
+    "\n",
+    "modelSave(model)"
    ]
   }
  ],
