--- a/AIanomalie.ipynb
+++ b/AIanomalie.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cache found in C:\\Users\\zidov/.cache\\torch\\hub\\pytorch_vision_v0.10.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = torch.hub.load('pytorch/vision:v0.10.0','mobilenet_v2', pretrained=False)\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,216 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Anomaly10959.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly14437.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly16174.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly12298.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly1436.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly2674.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly548.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly6438.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly843.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19619.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly11637.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly16138.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19799.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly17577.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly8726.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly1681.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19154.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly754.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19960.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly4379.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly10382.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly5179.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly14638.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly5654.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly13421.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly20646.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly18278.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly9799.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly12704.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly410.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly3317.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly12962.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly8259.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly6312.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19963.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly1965.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly19578.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly17338.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly5766.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly2638.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly9387.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly9656.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly7607.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly13137.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly9422.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly16717.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly15190.png\n",
-      "1\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly18742.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly8606.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n",
-      "Anomaly16100.png\n",
-      "0\n",
-      "<class 'numpy.ndarray'>\n",
-      "<class 'torch.Tensor'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainLoss = []\n",
     "testLoss = []\n",
@@ -430,10 +215,8 @@
     "        testRunningAcc = correct /total\n",
     "        testAcc.append(testRunningAcc)\n",
     "\n",
-    "        if epoch % 2 == 0:\n",
-    "            print(\"\\nEpoch: {}\".format(epoch))\n",
-    "            print('Test Acc. => {:.3f}%'.format(100 * testRunningAcc), end = ' | ')\n",
-    "            print('Test Loss => {:.5f}'.format(testRunningLoss))"
+    "        print('Test Acc. => {:.3f}%'.format(100 * testRunningAcc), end = ' | ')\n",
+    "        print('Test Loss => {:.5f}'.format(testRunningLoss))"
    ]
   },
   {
@@ -446,6 +229,29 @@
     "    torch.save(model,\"anomalie.pth\")\n",
     "\n",
     "modelSave(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = torch.load(\"anomalie.pth\")\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainLoss = []\n",
+    "testLoss = []\n",
+    "trainAcc = []\n",
+    "testAcc = []\n",
+    "checkAccuracy(testLoader,model)"
    ]
   }
  ],
